--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
-    <title>To Do List</title>
+    <title>To-Do-List</title>
   </head>
   <body>
     <div id="task">
