--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <input type="text" id="title" value="              Today's Task List" />
       <hr>
       <div>
-        <input type="text" id="taskItem" placeholder="Add Task"/>
+        <input type="text" id="taskItem" placeholder="Add Task" required/>
         <i id="add" class="bi bi-plus-lg"></i>
       </div>
       <ul id="list">
